# isucon13

./: .gitignore  README.md  mount.sh  rescue_src.sh  ssh-config
backup/: isu2-env.sh  isu3-env.sh
itamae/: Gemfile  default.sh  ichigeki.sh  setup.sh
itamae/cookbooks/common/: default.rb
itamae/cookbooks/common/files/home/isucon/: alp.sh
itamae/cookbooks/common/files/home/isucon/.installer/: alp.sh  lazygit.sh  percona_toolkit.sh  rust_tools.sh  trdsql.sh
itamae/cookbooks/db_isupipe/: default.rb
itamae/cookbooks/db_isupipe/files/home/isucon/: recreate_isupipe_db.sh
itamae/cookbooks/dnsdist/: default.rb
itamae/cookbooks/dnsdist/files/etc/dnsdist/: dnsdist.conf
itamae/cookbooks/isucondition/: default.rb
itamae/cookbooks/isupipe/: default.rb
itamae/cookbooks/isupipe/files/etc/systemd/system/: isupipe-rust.service
itamae/cookbooks/isupipe/files/home/isucon/: env.sh
itamae/cookbooks/monitoring/: default.rb
itamae/cookbooks/mysql/: default.rb
itamae/cookbooks/mysql/files/etc/mysql/conf.d/: my.cnf
itamae/cookbooks/mysql/files/etc/mysql/mariadb.conf.d/: 50-mysqld-safe.cnf
itamae/cookbooks/nginx/: default.rb
itamae/cookbooks/nginx/files/etc/nginx/: nginx.conf
itamae/cookbooks/powerdns/: default.rb
itamae/cookbooks/powerdns/files/etc/powerdns/: pdns.conf
itamae/cookbooks/rust/: default.rb
itamae/roles/: default.rb  setup.rb
webapp/rust/: Cargo.toml  Dockerfile
webapp/rust/.cargo/: config.toml
webapp/rust/src/: main.rs
webapp/sql/: init.sh
webapp/sql/initdb.d/: 10_schema.sql
(+3 files in other folders)
