[package]
name = "isupipe"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1

[dependencies]
async-session = "3"
axum = { version = "0.6.20", features = ["headers", "tracing"] }
axum-extra = { version = "0.8", features = [
    "cookie-signed",
    "cookie-key-expansion",
] }
base64 = "0.21"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.10.7"
hex = "0.4.3"
hyper = "0.14"
listenfd = "1"
moka = { version = "0.12.1", features = ["future"] }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = [
    "macros",
    "runtime-tokio",
    "mysql",
    "rust_decimal",
] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typenum = "1.17.0"
uuid = { version = "1", features = ["v4"] }
